Version 20120405
 * make git clean -dfx actually work in intended way
Version 20120311
 * Initial version