@@ -1,24 +1,21 @@
-# Maintainer: Figo.zhang <figo1802@gmail.com>
+# Maintainer: Jakub Schmidtke <sjakub-at-gmail-dot-com>
+# Contributor: Figo.zhang <figo1802@gmail.com>
 
 pkgname=android-docs
-pkgver=3.2
+pkgver=15_r02
 pkgrel=1
 pkgdesc='API docs for Google Android SDK'
 arch=('any')
-url="http://developer.android.com/sdk/index.html"
-license=('custom')
+url="http://developer.android.com"
+license=('Apache')
 depends=('android-sdk')
-_sdk=android-sdk
-_tools="opt/${_sdk}/tools"
-_ptools="opt/${_sdk}/platform-tools"
-
-source=("http://dl-ssl.google.com/android/repository/docs-${pkgver}_r01-linux.zip")
-
-md5sums=('d6889907c3bf6beba2123fbeefed3a97')
+options=(!strip)
+source=("http://dl-ssl.google.com/android/repository/docs-${pkgver}.zip")
+sha1sums=('f25069605d65e529069e276eebca46a35829f55f')
 
 package() {
-  cd "$pkgdir"
-  mkdir -p opt/$_sdk
-  cp -a "$srcdir/docs_r01-linux/" $pkgdir/opt/$_sdk/docs
+  mkdir -p "${pkgdir}/opt/android-sdk/"
+  mv "${srcdir}/docs" "${pkgdir}/opt/android-sdk/"
 
+  chmod -R ugo+rX "${pkgdir}/opt"
 }
