@@ -17,7 +17,9 @@ md5sums=('a119abf3f3b05ff214fafddab371cdbd')
 
 build() {
   cd $srcdir/$pkgname-$pkgver
-  
+
+  sed -i '/\/gtypes/d' src/gldit/cairo-dock-keybinder.h  
+
   [[ -e build ]] || mkdir build 
   cd build
   cmake .. -DCMAKE_INSTALL_PREFIX=/usr
