@@ -7,13 +7,13 @@ true && pkgname=('calligra-filters-git' 'calligra-interfaces-git' 'calligra-libs
 		 'calligra-plan-git' 'calligra-stage-git' 'calligra-krita-git' 'calligra-sheets-git' \
 		 'calligra-sheets-doc-git' 'calligra-words-git' 'calligra-handbook-git' 'calligra-thesaurus-doc-git' \
 		 'calligra-flow-git' 'calligra-braindump-git' 'calligra-mobile-git' 'calligra-active-git')
-pkgver=20120414
+pkgver=20120417
 pkgrel=1
 arch=('i686' 'x86_64')
 license=('FDL1.2' 'GPL2' 'LGPL')
 
 makedepends=('kdepimlibs' 'lcms2' 'gsl' 'glew' 'libqtgtl' 'libpqxx' 'fftw' \
-	     'libspnav' 'automoc4' 'boost' 'cmake' 'eigen' 'git' 'pstoedit' \
+	     'libspnav' 'automoc4' 'boost' 'cmake' 'eigen2' 'git' 'pstoedit' \
 	     'libwpd' 'libwpg' 'docbook-xml' 'libgsf' 'kdegraphics-okular' \
 	     'kdeedu-marble' 'libkdcraw' 'freetds' 'libwps' 'libvisio-git')
 groups=('calligra-git')
