@@ -1,19 +1,17 @@
-# Maintainer: gareth_c 
+# Contributor: gareth_c
+# Maintainer: Ner0
 
 pkgname=cinnamon-theme-minty
 pkgver=1.6
 pkgrel=1
-pkgdesc="Minty - a Cinnamon theme with some flavour of Linux Mint"
-arch=('any')
+pkgdesc="Cinnamon theme with some flavour of Linux Mint"
 url="http://cinnamon-spices.linuxmint.com/themes/view/25"
 license=('GPL')
-depends=('cinnamon' 'gtk3')
-source=('http://cinnamon-spices.linuxmint.com/uploads/themes/346X-YCSO-IAAV.zip')
+arch=('any')
+depends=('cinnamon')
+source=("http://cinnamon-spices.linuxmint.com/uploads/themes/346X-YCSO-IAAV.zip")
 md5sums=('49510afbbe0c98508ac73ab27a956ac3')
-build() {
-        cd ${srcdir}/Minty/
-        elementary_dir="$pkgdir/usr/share/themes/Minty/"
-        mkdir -p $elementary_dir
-        find . -type f -exec install -Dm644 '{}' "$pkgdir/usr/share/themes/Minty/{}" \;
-}
 
+package() {
+  find Minty/ -type f -exec install -Dm644 '{}' "$pkgdir/usr/share/themes/{}" \;
+}
