@@ -1,0 +1,24 @@
+# Maintainer: Jameson Pugh <imntreal@gmail.com>
+pkgname=ctntad
+pkgver=0.1.5
+pkgrel=1
+pkgdesc="Ceton InfiniTV Tunning Adapter Driver"
+arch=('i686' 'x86_64')
+url="http://www.cetoncorp.com/infinitv/support/linux.php"
+license=('GPL')
+depends=('gupnp' 'libgusb-ceton')
+source=(http://cetoncorp.com/downloads/$pkgname-$pkgver.tar.gz)
+sha256sums=('de4fa49793ef526c7f26260ac4b8e5452675facc3d8b358d7e3435230ba79e2b')
+
+build() {
+  cd "$srcdir/$pkgname-$pkgver"
+  ./configure --prefix=/usr
+  make
+}
+
+package() {
+  cd "$srcdir/$pkgname-$pkgver"
+  make DESTDIR="$pkgdir/" install
+}
+
+# vim:set ts=2 sw=2 et:
