@@ -3,7 +3,7 @@
 # Contributor: Tom Burdick <thomas.burdick@wrightwoodtech.com>
 
 pkgname=erlang-r15b
-pkgver=R15B
+pkgver=R15B01
 pkgrel=1
 pkgdesc="Temporary erlang R15B until included in extra"
 arch=(i686 x86_64)
@@ -13,8 +13,8 @@ depends=('ncurses' 'glibc')
 provides=('erlang')
 conflicts=('erlang')
 makedepends=('java-environment' 'perl' 'wxgtk' 'openssl' 'unixodbc>=2.3.1' 'mesa')
-optdepends=('wxgtk: for wx support'
-    'mesa: for gl support in wx'
+optdepends=('wxgtk: for wx support' 
+    'mesa: for gl support in wx' 
     'tcl: for toolbar support (with tk)'
     'tk: for toolbar support (with tcl)'
     'java-environment: for jinterface/ic support'
@@ -22,10 +22,10 @@ optdepends=('wxgtk: for wx support'
 
 options=('!makeflags')
 source=(http://www.erlang.org/download/otp_src_${pkgver/./-}.tar.gz
-http://www.erlang.org/download/otp_doc_man_${pkgver/./-}.tar.gz)
-md5sums=('dd6c2a4807551b4a8a536067bde31d73'
-         '9738da523737712a9db87db0dee05338')
-
+	http://www.erlang.org/download/otp_doc_man_${pkgver/./-}.tar.gz)
+md5sums=('f12d00f6e62b36ad027d6c0c08905fad'
+         'd87412c2a1e6005bbe29dfe642a9ca20')
+         
 build() {
   cd "$srcdir/otp_src_${pkgver/./-}"
   export ERTSVERSION=$(sed -n 's/^VSN[ ]*=[ ]*\([0-9.]\)/\1/p' < erts/vsn.mk)
@@ -70,5 +70,4 @@ package() {
   install -Dm644 "$srcdir/otp_src_${pkgver/./-}/EPLICENCE" "$pkgdir/usr/share/licenses/$pkgname/EPLICENCE"
 
 }
-
 
