@@ -1,44 +1,45 @@
 # Contributor: matthiaskrgr <matthiaskrgr _strange_curverd_character_ freedroid D0T org>
+
 pkgname=flare-rpg-git
-pkgver=20120405
+pkgver=20120417
 pkgrel=1
 pkgdesc="open source action roleplaying game"
 url="http://clintbellanger.net/rpg"
 license=('GPL3' 'CC-BY-SA-3.0')
 arch=('i686' 'x86_64')
-makedepends=('git' 'cmake')
+makedepends=('git>=1.7.10-1' 'cmake')
 depends=('sdl_image' 'sdl_mixer' 'sdl_ttf' 'hicolor-icon-theme' 'python')
 conflicts=('flare-rpg')
 replaces=('flare-rpg')
 changelog=changelog
 install=flare-rpg-git.install
-source=("changelog"
-        "flare-rpg-git.install")
-sha1sums=('7cb9f4bc58ae6c6c8f3953bca13cbd19f9bfebfd'
+source=('changelog'
+        'flare-rpg-git.install')
+sha1sums=('7bb9eeff5f0f04000ebcc8ec5ce8a05d76e20bf1'
           'f1399479b57f5948fb07b188c7599c1f04d2989b')
 
 _gitroot="git://github.com/clintbellanger/flare.git"
 _gitname="flare-rpg"
 
 build() {
-	cd "$srcdir"
-	msg "Connecting to the GIT server...."
+	cd $srcdir
+	msg "Connecting to the GIT server..."
 
 	if [[ -d $srcdir/$_gitname ]] ; then
 		cd $_gitname
 		msg "Removing build files..."
 		git clean -dfx
 		msg "Updating..."
-		git pull origin
+		git pull origin master --depth 1 --no-tags
 		msg "The local files are updated."
 	else
 		msg "Cloning..."
-		git clone $_gitroot $_gitname --depth 1
+		git clone $_gitroot $_gitname --depth 1 --single-branch --branch master
 		msg "Clone done."
 	fi
 
-	cd "$srcdir"/"$_gitname"
-	msg "Starting compilation..."
+	cd $srcdir/$_gitname
+	msg "Starting compile..."
 	msg "Creating and moving to build directory..."
 	mkdir build
 	cd build
@@ -49,11 +50,11 @@ build() {
 }
 
 package() {
-	cd "$srcdir"/"$_gitname"
+	cd $srcdir/$_gitname
 	msg "Compiling and installing to pkgdir this time..."
 	cd build
 	msg "Running cmake..."
-	cmake -DCMAKE_INSTALL_PREFIX=/usr -DBINDIR=bin -DDATADIR=share/flare-rpg ..
+	cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DBINDIR=bin -DDATADIR=share/flare-rpg
 	msg "Compiling..."
 	make install DESTDIR=$pkgdir
 	msg "Compiling done."
