@@ -7,7 +7,7 @@ arch=('any')
 url="https://launchpad.net/itmages"
 license=('GPL')
 groups=('network')
-depends=('python2' 'python-pycurl' 'dbus-python' 'python-lxml' 'pygobject')
+depends=('python2' 'python-pycurl' 'dbus-python' 'python2-lxml' 'pygobject')
 makedepends=('bzr')
 md5sums=() #generate with 'makepkg -g'
 
@@ -17,4 +17,4 @@ build() {
   bzr --no-plugins branch $_bzrtrunk $pkgname
   cd "$srcdir/$pkgname"
   python2 ./setup.py install --root="${pkgdir}"
-}    
+}     
