@@ -2,7 +2,7 @@
 
 pkgname=nethack-nao
 _pkgname=nethack
-pkgver=3.4.3_20120411
+pkgver=3.4.3_20120417
 _pkgver=3.4.3
 pkgrel=1
 pkgdesc='A single player dungeon exploration game (with patches from NAO)'
@@ -20,7 +20,7 @@ changelog="${_pkgname}.changelog"
 source=("http://downloads.sourceforge.net/${_pkgname}/${_pkgname}-${_pkgver//.}-src.tgz"
         "http://alt.org/nethack/nh343-nao.diff")
 sha256sums=('bb39c3d2a9ee2df4a0c8fdde708fbc63740853a7608d2f4c560b488124866fe4'
-            '019f37ec826912868d4a288b12f0b2c4185e95127a36943fde758c6c139f0d37')
+            '8ca1a254a1f57b269e36d7d77e1f1bd31d10a4a861e5efc1382659d20b3e9875')
 
 build()
 {
