@@ -1,3 +1,8 @@
+2012-04-17 AkiraYB <brunoyb!yahoo,com,br>
+
+	* 3.4.3_20120417-1 :
+	Update patch
+
 2012-04-12 AkiraYB <brunoyb!yahoo,com,br>
 
 	* 3.4.3_20120411-1 :
