@@ -1,0 +1,44 @@
+pkgname='ostree-git'
+pkgver='20120417'
+pkgrel='1'
+url="http://git.gnome.org/browse/ostree/tree/README.md"
+pkgdesc='The GNOME OS build tool'
+arch=('i686' 'x86_64')
+license=('GPL' 'LGPL')
+provides=('ostree')
+makedepends=('pkg-config')
+depends=('libsoup' 'python2' 'libarchive')
+_gitroot="git://git.gnome.org/ostree"
+_gitname="ostree"
+
+build() {
+	cd "$srcdir"
+
+  msg "Connecting to the ostree git repository..."
+  if [ -d "$srcdir/$_gitname" ] ; then
+    cd $_gitname && git pull origin
+    msg "The local files are updated."
+  else
+    git clone $_gitroot
+  fi
+
+  msg "GIT checkout done or server timeout"
+  cd "$srcdir/$_gitname"
+
+  msg2 "Configuring..."
+	PYTHON=python2 ./autogen.sh --prefix=/usr
+  msg2 "Compiling..."
+	make PYTHON=python2
+}
+
+package() {
+  cd "$srcdir/$_gitname"
+
+  msg2 "Packaging..."
+  make install DESTDIR="$pkgdir" PYTHON=python2
+
+  msg2 "Fix ostbuild Python script header"
+  sed -i -e '1i#! /usr/bin/python2' "${pkgdir}/usr/bin/ostbuild"
+}
+
+
