@@ -1,3 +1,6 @@
+Version 20120417
+ * only pull origin master, when we do git pull
+ * perform shallow, single-branch clone
 Version 20120405
  * make git clean -dfx actually work in intended way
 Version 20120311
